2024-04-15T03:30:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8682856746 # 363
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: query file size: 24485
* notice: accum prev / next / diff: re vi: 0 269 / 0 270 / +0 +1

2024-04-14T22:27:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8681331810 # 362
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-14
* notice: query file size: 24485
* notice: accum prev / next / diff: re vi: 0 246 / 0 269 / +0 +23

2024-02-26T12:15:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8048674990 # 302
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-02-26
* notice: query file size: 24341
* notice: accum prev / next / diff: re vi: 0 245 / 0 246 / +0 +1

2024-01-09T20:10:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7466349062 # 16
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-01-09
* notice: query file size: 24319
* notice: accum prev / next / diff: re vi: 0 243 / 0 245 / +0 +2

2024-01-09T16:12:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7463743598 # 15
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-01-09
* notice: query file size: 24291
* notice: accum prev / next / diff: re vi: 0 241 / 0 243 / +0 +2

2024-01-08T04:12:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7443092098 # 6